# fpga-cell-placement-optimizer

./: .gitignore  Cargo.toml  log_digest.py  plot.py  records.json  runner.py  runner_sa.py
output/annealing/: 9symml.blif_0.5_0.9_0.1.sa.txt  alu2.blif_0.5_0.9_0.1.sa.txt  apex7.blif_0.5_0.9_0.1.sa.txt  e64.blif_0.5_0.9_0.1.sa.txt  example2.blif_0.5_0.9_0.1.sa.txt  k2.blif_0.5_0.9_0.1.sa.txt  term1.blif_0.5_0.9_0.1.sa.txt  too-lrg.blif_0.5_0.9_0.1.sa.txt  vda.blif_0.5_0.9_0.1.sa.txt
output/genetic/: 9symml.blif_100000_100_10_40_30_0.3.txt  alu2.blif_100000_100_10_40_30_0.3.txt  apex7.blif_100000_100_10_40_30_0.3.txt  e64.blif_100000_100_10_40_30_0.3.txt  example2.blif_100000_100_10_40_30_0.3.txt  k2.blif_100000_100_10_40_30_0.3.txt  term1.blif_100000_100_10_40_30_0.3.txt  too-lrg.blif_100000_100_10_40_30_0.3.txt  vda.blif_100000_100_10_40_30_0.3.txt
src/: benchmark_tests.rs  bound_box.rs  genetic.output.txt  lib.rs  main.rs  main_old.rs  placement.rs  problem.rs  sa.output.txt  typing.rs
src/algorithms/: annealing.rs  genetic.rs  mod.rs  util.rs
src/typing/: blif.rs  bound_box.rs  mod.rs  placement.rs  problem.rs
