[package]
name = "FPGA_placement"
version = "0.1.0"
authors = ["xloc <xloc.cc@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

rand = "0.8.3"
getrandom = { version = "0.2", features = ["js"] }

serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.test]
opt-level = 3

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ['-O4']